# autoprun

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/: main.py
src/autoprun/: cli.py
tests/: test_smoke.py
