[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoprun"
version = "0.1.0"
description = "Autonomous pull-request workflow planner"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
autoprun = "autoprun.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
